Updated MenuItemController add anothe route controller
